[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "project-monitor"
version = "0.1.0"
description = "Lightweight pipeline step runner, health check, checkpoint and failure logger. Reusable across Python projects."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["pipeline", "monitoring", "health-check", "checkpoint", "logging"]
dependencies = []   # zero mandatory deps — stdlib only

[project.optional-dependencies]
yaml = ["pyyaml>=6"]    # runner.run_yaml() requires this
rich = ["rich>=13"]     # optional pretty terminal output
dev  = ["pytest>=8", "pyyaml>=6"]

[project.urls]
Repository = "https://github.com/AntonioNoOne/project-monitor"

[project.scripts]
pmonitor = "monitor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["monitor*"]
